08 Jun 2010 'scpimply' and 'scpecho' use ON/OFF now instead of being a toggle.
03 Jun 2010 'scpimply' command and function added. 'Unknown' commands are passed to the
            scp for processing, if the scp has enabled scp operator commands.
03 Jun 2010 MAXCPU is reset to NUMCPU if NUMCPU exceeds MAXCPU; Warning message issued.
03 Jun 2010 QQUIT added for cmdlevels above SYSOPER. (Quick QUIT)
26 May 2010 QUERY command and enhancements. See QUERY HELP for assistance
25 May 2010 Add EXCP counts to all devices
20 May 2010 QUIT and SSD require 2nd command within 60 seconds.
12 May 2010 Addition of a native Windows Threading Model (wthreads) enabled with
            OPTION_WTHREADS. Requires WIN2K and later. Disables PTTRACE.
08 May 2010 HERCULES_LIB is introduced as an environment variable for LOADABLE  
            MODULES DIRECTORY.
            Default library after processing startup arguments is:
            1) -p highest priority
            2) HERCULES_LIB is 2nd priority
            3) MODULESDIR define is 3rd priority
            4) Final Default is determined by attempting to use path where startup program
               was found and if it is not resolved the "hercules" is used.   - Paul G.
07 May 2010 Changes to selecting default Loadable Modules Directory. - Paul G.
            The default directory selection has been change to use the directory
            that hercules was started from if define MODULESDIR was not set.
            Unless no path is available, then hercules will be used. 
07 May 2010 Functions basename() and dirname() are required and use the libdef.h header. (not windows)
11 Apr 2010 Fix SCSI tape dev-attn failure if read-only media is mounted - Fish
29 Mar 2010 Add support for cmdlevel to limit console commands to the requested 
            command set. Effects only user input commands, not panel, HAO or diagnose.
            Default works as before. - Paul G.